Fix for scrollbar being visible in modals when it should not be visible.

--- a/src/web/css/style.less
+++ b/src/web/css/style.less
@@ -474,7 +474,7 @@ input:hover, input:active, input:focus, textarea:hover, textarea:active, textare
 
     #header {}
     #content {
-        overflow-y: scroll;
+        overflow-y: auto;
         height:400px;
         ul {
             padding: 0;
